kubernetes/deployment-service-event.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: event-service
  namespace: online-event-booking-hammad
spec:
  replicas: 2
  selector:
    matchLabels:
      app: event-service
  template:
    metadata:
      labels:
        app: event-service
    spec:
      containers:
      - name: event-service
        image: event-service-event-service:latest
        imagePullPolicy: Never
        ports:
        - containerPort: 5001
---
apiVersion: v1
kind: Service
metadata:
  name: event-service
  namespace: online-event-booking-hammad
spec:
  selector:
    app: event-service
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5001
  type:  NodePort
